# EasyTeuk

./: Makefile.am  README.md  config.h  configure.ac  etCore.c  etCore.h  etExample.c  etExample.h  etStructs.h  etUtils.c  etUtils.h  main.c  myDatatypes.h  myFileIO.c  myFileIO.h  myLog.h  myUtils.c  myUtils.h
